# MDA

./: BELGIUM_-_Arrondissements.csv  BELGIUM_-_Arrondissements.shx  BELGIUM_-_Municipalities.csv  Interventions_ALL.csv  Interventions_BXL.csv  Interventions_NOTBXL.csv  MDA Data Cleaning.ipynb  MDA Data Cleaning_RamyV3 copy.ipynb  NetworkAnalysisCom.ipynb  PostalCodesBE .parquet  Survival_data.csv  Survival_data100.csv  aed.csv  aed.xls  aedCoordonate.csv  aed_Cleaning.ipynb  aed_Cleaning_thread.ipynb  ambulanceCleaning.ipynb  ambulanceCleaningOLD.ipynb  ambulances.csv  ambulances.xls  belgiumboundaries.py  choropleth.py  inter_clean_tryfon.py  interventionCleaning.ipynb  mug.py  network_analysis_module.py  network_module.ipynb  postal_code_Cleaning.ipynb  postal_codes.csv  postal_codes.xls  project_cleandata.py  project_survival_chance.py  requierement.txt
part_2/: .gitingore  LICENSE  Makefile  README.md  Survival_data.xlsx  Survival_data.xlsx:Zone.Identifier  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
part_2/assets/: notes.txt  project_description.txt
part_2/data/: uri_aed.csv
part_2/runs/20240603_0245/: graph_0_0.graphml  graph_0_1.graphml  graph_0_10.graphml  graph_0_11.graphml  graph_0_12.graphml  graph_0_13.graphml  graph_0_14.graphml  graph_0_15.graphml  graph_0_16.graphml  graph_0_2.graphml  graph_0_3.graphml  graph_0_4.graphml  graph_0_5.graphml  graph_0_6.graphml  graph_0_7.graphml  graph_0_8.graphml  graph_0_9.graphml  graph_init.graphml
part_2/tests/: test_logger.py  test_main.py  test_trivial.py
(+363 files in other folders)
